--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
+    "@vue-hero-icons/solid": "^1.7.2",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "postcss": "^8",
