--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cloud-in",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "scripts": {
+    "start" : "vue-cli-service build && electron .",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -12,6 +14,7 @@
     "@heroicons/vue": "^2.0.16",
     "@vue-hero-icons/solid": "^1.7.2",
     "autoprefixer": "^10",
+    "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "vue": "^3.2.13",
@@ -21,11 +24,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/body-parser": "^1.19.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^23.1.4",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "tailwindcss": "^3.2.7",
