--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@heroicons/vue": "^2.0.16",
     "@vue-hero-icons/solid": "^1.7.2",
     "autoprefixer": "^10",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "googleapis": "^114.0.0",
     "postcss": "^8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
