add event source listener

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-sse": "^2.5.2",
     "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.0"
   },
