CLD-80 Integração com Electron

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "cloud-in",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "scripts": {
+    "electron:serve": "electron .",
+    "start": "vue-cli-service build && electron .",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -14,6 +17,7 @@
     "autoprefixer": "^10",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "electron-vue-google-auth": "^1.0.3",
     "googleapis": "^114.0.0",
     "postcss": "^8",
     "vue": "^3.2.13",
@@ -30,6 +34,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^23.2.4",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "tailwindcss": "^3.2.7",
