--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
     "@vue-hero-icons/solid": "^1.7.2",
+    "@vue/cli": "^5.0.8",
     "autoprefixer": "^10",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
